examples/kubectl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl
  namespace: test
spec:
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sleep"]
    args: ["infinity"]
