examples/nginx-config-file2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  containers:
  - name: nginx
    image: nginx:1.21.6-alpine
    volumeMounts:
    - name: config-volume
      mountPath: /etc/sample.txt
      subPath: sample.txt
  volumes:
  - name: config-volume
    configMap:
      name: demo-config
