examples/ubuntu-emptydir.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu1
    image: ubuntu:20.04
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  - name: ubuntu2
    image: ubuntu:20.04
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir: {}
