examples/ubuntu-hostpath.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:20.04
    command: ["sleep"]
    args: ["infinity"]
    volumeMounts:
    - mountPath: /root/test
      name: test-volume
  volumes:
  - name: test-volume
    hostPath:
      path: /tmp/test
