examples/ubuntu-namespaced.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: test
spec:
  containers:
  - name: ubuntu
    image: ubuntu:20.04
    command: ["sleep"]
    args: ["infinity"]
