examples/hello2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello2-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello2
        pathType: Prefix
        backend:
          service:
            name: hello2
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello2
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: hello2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello2
  template:
    metadata:
      labels:
        app: hello2
    spec:
      containers:
      - name: hello-kubernetes
        image: carvicsforth/hello-kubernetes:1.10
